Added memtable