@@ -12,29 +12,29 @@
     <modules>
         <module>core</module>
         <module>serializer</module>
-<!--        <module>logstore</module>-->
+        <!--        <module>logstore</module>-->
         <module>codec</module>
-<!--        <module>event-store</module>-->
-<!--        <module>es-server</module>-->
-<!--        <module>lsmtree</module>-->
+        <!--        <module>event-store</module>-->
+        <!--        <module>es-server</module>-->
+        <!--        <module>lsmtree</module>-->
         <module>tcp</module>
-<!--        <module>es-client</module>-->
-<!--        <module>es-shared</module>-->
-<!--        <module>cli</module>-->
-<!--        <module>metrics</module>-->
-<!--        <module>eventry</module>-->
-<!--        <module>lsmtree-server</module>-->
+        <!--        <module>es-client</module>-->
+        <!--        <module>es-shared</module>-->
+        <!--        <module>cli</module>-->
+        <!--        <module>metrics</module>-->
+        <!--        <module>eventry</module>-->
+        <!--        <module>lsmtree-server</module>-->
         <module>cluster</module>
-<!--        <module>cluster-log-test</module>-->
-        <module>indexed-log</module>
-        <module>indexed-log-server</module>
-        <module>log-server-test</module>
+        <!--        <module>cluster-log-test</module>-->
+<!--        <module>indexed-log</module>-->
+<!--        <module>indexed-log-server</module>-->
+<!--        <module>log-server-test</module>-->
         <module>stream-db</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -50,11 +50,11 @@
                 <artifactId>indexed-log</artifactId>
                 <version>${project.version}</version>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>io.joshworks.fstore</groupId>-->
-<!--                <artifactId>lsmtree</artifactId>-->
-<!--                <version>${project.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>io.joshworks.fstore</groupId>-->
+            <!--                <artifactId>lsmtree</artifactId>-->
+            <!--                <version>${project.version}</version>-->
+            <!--            </dependency>-->
             <!-- Serializers -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
@@ -70,6 +70,17 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>kryo-serializer</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.collections</groupId>
+                <artifactId>eclipse-collections-api</artifactId>
+                <version>10.4.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.eclipse.collections</groupId>
+                <artifactId>eclipse-collections</artifactId>
+                <version>10.4.0</version>
             </dependency>
 
             <!-- Codecs -->
@@ -89,27 +100,27 @@
                 <version>${project.version}</version>
             </dependency>
 
-<!--            <dependency>-->
-<!--                <groupId>${project.groupId}</groupId>-->
-<!--                <artifactId>logstore</artifactId>-->
-<!--                <version>${project.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>${project.groupId}</groupId>-->
+            <!--                <artifactId>logstore</artifactId>-->
+            <!--                <version>${project.version}</version>-->
+            <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>${project.groupId}</groupId>-->
-<!--                <artifactId>event-store</artifactId>-->
-<!--                <version>${project.version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>${project.groupId}</groupId>-->
-<!--                <artifactId>es-shared</artifactId>-->
-<!--                <version>${project.version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>${project.groupId}</groupId>-->
-<!--                <artifactId>es-client</artifactId>-->
-<!--                <version>${project.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>${project.groupId}</groupId>-->
+            <!--                <artifactId>event-store</artifactId>-->
+            <!--                <version>${project.version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>${project.groupId}</groupId>-->
+            <!--                <artifactId>es-shared</artifactId>-->
+            <!--                <version>${project.version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>${project.groupId}</groupId>-->
+            <!--                <artifactId>es-client</artifactId>-->
+            <!--                <version>${project.version}</version>-->
+            <!--            </dependency>-->
 
 
             <dependency>
@@ -140,6 +151,23 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>15</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
